<resources>
    <string name="app_name">Penguinone</string>
    <string name="background">background</string>
    <string name="molecule">molecule</string>
    <string name="button">button</string>
    <string name="reduceFootprintTitle">reduce your chemical footprint</string>
    <string name="enviroPurityTest">take an chemical purity test</string>
    <string name="toxicCount">The average American household contains about 62 toxic chemicals</string>
    <string name="none">none</string>
    <string name="submit">Submit!</string>
    <string name="quiz1">I use products containing Phthalates (commonly found in perfumes and colognes)</string>
    <string name="quiz2">My toothpaste contains Sodium Lauryl Sulfate</string>
    <string name="quiz3">I use products containing Triclosan (commonly found in hand and dish soap)</string>
    <string name="quiz4">I use products containing Parabens (commonly found in deodorant and makeup)</string>
    <string name="quiz5">I use skin whitener or skin bleacher </string>
    <string name="quiz6">My glass polisher contains ammonia </string>
    <string name="quiz7">I use disinfectant wipes containing 2-butoxyethanol</string>
    <string name="quiz8">I rarely use public transportation services (bus, train, etc)</string>
    <string name="quiz9">My fabric softener contain Quaternary Ammonium salts</string>
    <string name="quiz10">I use antiperspirants containing Aluminum, Propylene Glycol, or Parabens</string>
    <string name="quiz11">I leave the lights on when I leave the house</string>
    <string name="quiz12">My vehicle gets less than 30 miles per gallon </string>
    <string name="quiz13">I use compact fluorescent lightbulbs </string>
    <string name="quiz14">I drink bottled water </string>
    <string name="quiz15">I flush my unused prescription drug down the toilet </string>
    <string name="quiz16">I use plastic bag to carry my groceries </string>
    <string name="quiz17">I leave the faucet on when I brush my teeth and shave</string>
    <string name="quiz18">My house contains appliances older than 15 years</string>
    <string name="quiz19">I use lipstick containing leads</string>
    <string name="quiz20">I use artificial air freshener </string>
    <string name="chemTest">The Unofficial Chemical Purity Test</string>
    <string name="score">Your Score:</string>
    <string name="home">Return home</string>
    <string name="quiz80">Good job! You have a pretty safe lifestyle!</string>
    <string name="quiz50">You use some hazardous chemicals. Use this app to learn how you can improve!</string>
    <string name="quiz0">Oh no! You use a lot of hazardous chemicals that are toxic to you and the environment. Use this app to see what products you can replace.</string>
    <string name="deodorant1">Parabens mimic estrogen, disrupt hormone function, and increase risk of breast cancer</string>
    <string name="deodorant2">triclosan interferes with the body’s thyroid hormone metabolism, disrupts endocrine system, and harms immune system</string>
    <string name="soap1">triclosan interferes with the body’s thyroid hormone metabolism</string>
    <string name="soap2">triclosan disrupts the endocrine system and harms the immune system</string>
</resources>