<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EFF3"
    tools:context=".QuizActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz11" />

            <CheckBox
                android:id="@+id/checkBox19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz19" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz1" />

            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz15" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz6" />

            <CheckBox
                android:id="@+id/checkBox20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz20" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz8" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz14" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz10" />

            <CheckBox
                android:id="@+id/checkBox18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz18" />

            <CheckBox
                android:id="@+id/checkBox17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz17" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz12" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz4" />

            <CheckBox
                android:id="@+id/checkBox16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz16" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz7" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz3" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz9" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz13" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz5" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz2" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/chemTest"
        android:textAlignment="center"
        android:textColor="@android:color/tab_indicator_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/quizButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button"
        android:onClick="submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/button" />

    <TextView
        android:id="@+id/quizButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/quizButton"
        app:layout_constraintEnd_toEndOf="@+id/quizButton"
        app:layout_constraintStart_toStartOf="@+id/quizButton"
        app:layout_constraintTop_toTopOf="@+id/quizButton" />

</androidx.constraintlayout.widget.ConstraintLayout>