<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#828282"
    tools:context=".TitleActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="660dp"
        android:contentDescription="@string/none"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/title" />

    <ImageButton
        android:id="@+id/houseButton"
        android:layout_width="325dp"
        android:layout_height="75dp"
        android:layout_marginTop="440dp"
        android:layout_marginBottom="28dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button"
        android:onClick="next"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/quizButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/button" />

    <TextView
        android:id="@+id/houseButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/reduceFootprintTitle"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/houseButton"
        app:layout_constraintEnd_toEndOf="@+id/houseButton"
        app:layout_constraintStart_toStartOf="@+id/houseButton"
        app:layout_constraintTop_toTopOf="@+id/houseButton" />

    <ImageButton
        android:id="@+id/quizButton"
        android:layout_width="311dp"
        android:layout_height="84dp"
        android:layout_marginTop="12dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button"
        android:onClick="next"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/houseButton"
        app:srcCompat="@mipmap/button" />

    <TextView
        android:id="@+id/quizButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/enviroPurityTest"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/quizButton"
        app:layout_constraintEnd_toEndOf="@+id/quizButton"
        app:layout_constraintStart_toStartOf="@+id/quizButton"
        app:layout_constraintTop_toTopOf="@+id/quizButton" />

</androidx.constraintlayout.widget.ConstraintLayout>